# modlTp3

./: .gitignore  CMakeLists.txt  CMakeLists.txt_  gtest.cmake
include/: Classe.h  Echantillon.h  Histogramme.h  Histogramme.tpp  Valeur.h
src/: Classe.cpp  Echantillon.cpp  Histogramme.cpp  Valeur.cpp  main.cpp
test/: TP3_test.cpp  test_Echantillon.inl  test_Histogramme.inl
